core: Add support for 256 and more x86 vCPUs
710 vCPUs are supported on x86_64 now and MaxNumOfVmCpus config value
was increased appropriately in
da53a92557e0fa8d56c497768b6a923ca1413404.  However in order to make
more than 255 vCPUs work needs some additional changes:

- It has been tested on platform only for q35, so we restrict the
  increased limit to that chipset.

- We must add ioapic CPU feature and an IOMMU device to lift the APIC
  ID restriction.

This patch implements the above and makes the increased vCPU limit
available and usable.

Change-Id: I5696a660ed351d471c75bdcb8e31e3a5f8f890b6
Bug-Url: https://bugzilla.redhat.com/1946231
Signed-off-by: Milan Zamazal <mzamazal@redhat.com>